feat: unified artifact lifecycle + Supervisor REUSE + Router priority
Lifecycle unification (KISS/DRY):
- Extract listArtifactsByMtime() — shared scanner for tools/ and workflows/
- Extract evictArtifacts() — parameterized GC for both tools and workflows
- Extract runWorkflowPlan() — shared execute+replan loop for WORKFLOW and REUSE paths
- Add workflow failure tracking via .fail.json sidecars (bumpWorkflowFailCount)
- Add --max-workflows / --workflow-age-days CLI options
- Promote MAX_REPLANS, MAX_CRASH_RETRIES, MAX_WORKFLOWS_IN_CONTEXT as named constants

Supervisor REUSE:
- New {"type":"REUSE","id":"workflow_*.json"} response type
- loadRecentWorkflows() now exposes id: filename for Supervisor to reference
- supervisorWorkflow() loads stored plan from disk and skips LLM planning call
- Safe fallback if referenced workflow was GC'd

Router instruction improvements:
- FAST PATH: DELEGATE_CHAT immediately for creative/conversational requests
- ACTION PRIORITY: EXECUTE > CREATE > SEARCH > DELEGATE_CHAT
- TOOL PREFERENCE: repeatable tasks must produce a reusable tool, not a one-off answer

Supervisor instruction improvements:
- GENERIC STEP GOALS: step goals must name actions generically, not specific values
- Ensures Coder produces reusable tool names (WeatherFetcher vs BrasíliaWeather)

ADK logging:
- Route SLF4J output into session log file (warn level) instead of discarding

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>